[project]
name = "starship-test"
version = "1.0.0"
description = "Starship prompt test repository"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "expertoclock", email = "talha007143@gmail.com"}
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
